# bug-riper

./: .gitignore  CHANGELOG.md  LICENSE  bug-riper.cabal  bug-riper.trace  fast-generate.ps1  generate.ps1  out-ast2.txt  out-full.txt  refs.dot  run.cmd  tests.exe.trace
analyze/: HieASTGraphGenerator.hs  HieDUGraphGenerator.hs  HieDUJungleGenerator.hs  Main.hs
app/: Coverage.hs  DUEffect.hs  Main.hs  SortingNetwork.hs
doc/: DUEffect.drawio  Generation Cycle.drawio  GraphNode.hs  ImperitiveCounterExample.hs
lib/: A.hs  B.hs  BasicSum.hs  Coverage.hs  DUEffect.hs  HieDUGraphGenerator.hs  ME.hs  Sample.hs  Sample1.hs  SortingNetwork.hs
plugin/: Instrumentation.hs  Instrumentation.v1.0.0.hs
src/: HieDUGraphGenerator.hs  HieGraphGenerator.hs  HieReader.hs  Main.hs  MainTemple.hs  Sample.hs  SourcePlugin.hs  SuitTemple.hs  TestSuite.hs
src/MonadReference/: ME.hs
tests/: BasicSumTest.hs  DUEffectTest.hs  Main.hs
