cabal-version:      3.0
name:               bug-riper

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             moxeed
maintainer:         mortezabahjat@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -fwrite-ide-info
                 -hiedir=.hie
                 -Wall 
                 --fhpc
                 -fplugin=Trace
    build-depends:  graph-trace, plugin-lib

executable bug-riper
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    
        --SourcePlugin
        --SortingNetwork
        --HieReader
        HieGraphGenerator
        HieDUGraphGenerator
        Sample

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    
        base ^>=4.17,
        ghc  ^>=9.4.2,
        containers,
        ghc-paths,
        mtl

    -- Directories containing source files.
    hs-source-dirs:   
        src
        app

    -- Base language which the package is written in.
    default-language: Haskell2010

library basic-sum-lib
    import: warnings
    exposed-modules: 
        BasicSum
        DUEffect
    hs-source-dirs: lib
    build-depends: base ^>=4.17
    default-language: Haskell2010

library plugin-lib
    exposed-modules: 
        Instrumentation
    hs-source-dirs: plugin
    build-depends: base
               , ghc
               , syb
               , containers
               , template-haskell
               , prettyprinter
    default-language: Haskell2010

test-suite tests
    import: warnings
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules:
        BasicSumTest
        DUEffectTest
    build-depends: base ^>=4.17, HUnit ^>=1.6, basic-sum-lib
    hs-source-dirs: tests
    default-language: Haskell2010
