cabal-version:      3.0
name:               bug-riper

version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             moxeed
maintainer:         mortezabahjat@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common instrumentation
    ghc-options: -fwrite-ide-info
                 -hiedir=.hie
                 -Wall 
                 -O0
                 --fhpc
                 -fplugin=Instrumentation
    build-depends: plugin-lib

common warnings
    ghc-options: -fwrite-ide-info
                 -hiedir=.hie
                 -Wall 
                 --fhpc

executable bug-riper
    main-is:          Main.hs
    build-depends:
        base ^>=4.17,
        main-lib,
        deepseq
    hs-source-dirs:   
        src
    default-language: Haskell2010

executable analyze
    import:           warnings
    main-is:          Main.hs
    other-modules:
        HieASTGraphGenerator
        HieDUGraphGenerator 
        HieDUJungleGenerator 
    build-depends:
        main-lib,
        base ^>=4.17,
        ghc  ^>=9.4.2,
        containers,
        ghc-paths,
        mtl,
        extra,
        regex-compat
    hs-source-dirs:   
        analyze
    default-language: Haskell2010

library main-lib
    import: instrumentation
    exposed-modules: 
        BasicSum
        DUEffect
        Sample
        ME
        Sample1
        Coverage
        SortingNetwork
    hs-source-dirs: lib
    build-depends: 
        base ^>=4.17,
        transformers,
        containers
    default-language: Haskell2010

library plugin-lib
    exposed-modules: 
        SourcePlugin
        Instrumentation
    hs-source-dirs: plugin
    build-depends: base
               , ghc
               , syb
               , containers
               , template-haskell
               , prettyprinter
    default-language: Haskell2010

test-suite tests
    import: warnings
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules:
        BasicSumTest
        DUEffectTest
    build-depends: base ^>=4.17, HUnit ^>=1.6, main-lib
    hs-source-dirs: tests
    default-language: Haskell2010
